--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 <div class="container">
                                     <h1 class="fade-item fade-item-1"> Carpet</h1>
                                     <p class="fade-item fade-item-2">From casual to formal, we've got you covered</p>
-                                    <a href="shop-default#" class="fade-item fade-item-3 tf-btn btn-fill animate-hover-btn btn-xl radius-60"><span>Shop collection</span><i class="icon icon-arrow-right"></i></a>
+                                    <a href="#" class="fade-item fade-item-3 tf-btn btn-fill animate-hover-btn btn-xl radius-60"><span>Shop collection</span><i class="icon icon-arrow-right"></i></a>
                                 </div>                              
                             </div>
                         </div>
@@ -134,7 +134,7 @@
                                 <div class="container">
                                     <h1 class="fade-item fade-item-1"> Carpet 2</h1>
                                     <p class="fade-item fade-item-2">From casual to formal, we've got you covered</p>
-                                    <a href="shop-default#" class="fade-item fade-item-3 tf-btn btn-fill animate-hover-btn btn-xl radius-60"><span>Shop collection</span><i class="icon icon-arrow-right"></i></a>
+                                    <a href="#" class="fade-item fade-item-3 tf-btn btn-fill animate-hover-btn btn-xl radius-60"><span>Shop collection</span><i class="icon icon-arrow-right"></i></a>
                                 </div>                              
                             </div>
                         </div>
@@ -3372,7 +3372,7 @@
                             </a>
                         </div>
                         <div class="demo-item">
-                            <a href="home-sneaker#">
+                            <a href="#">
                                 <div class="demo-image">
                                     <img class="lazyload" data-src="images/demo/home-sneaker.jpg" src="images/demo/home-sneaker.jpg" alt="home-sneaker">
                                 </div>
@@ -3510,20 +3510,17 @@
                 <div class="tf-search-content">
                     <div class="tf-cart-hide-has-results">
                         <div class="tf-col-quicklink">
-                            <div class="tf-search-content-title fw-5">Quick link</div>
                             <ul class="tf-quicklink-list">
                                 <li class="tf-quicklink-item">
-                                    <a href="shop-default#" class="">Fashion</a>
+                                    <a href="#" class="">Kids Rugs</a>
                                 </li>
                                 <li class="tf-quicklink-item">
-                                    <a href="shop-default#" class="">Men</a>
+                                    <a href="#" class="">Carpet Tiles</a>
                                 </li>
                                 <li class="tf-quicklink-item">
-                                    <a href="shop-default#" class="">Women</a>
+                                    <a href="#" class="">Boat Carpet</a>
                                 </li>
-                                <li class="tf-quicklink-item">
-                                    <a href="shop-default#" class="">Accessories</a>
-                                </li>
+                                
                             </ul>
                         </div>
                         <div class="tf-col-content">
@@ -3585,7 +3582,7 @@
             <div class="mb-body">
                 <ul class="nav-ul-mb" id="wrapper-menu-navigation">
                     <li class="nav-mb-item">
-                        <a href="shop-default#" class="tf-category-link mb-menu-link">
+                        <a href="#" class="tf-category-link mb-menu-link">
                             <div class="image">
                                 <img src="images/shop/cate/cate1.jpg" alt="">
                             </div>
@@ -3593,7 +3590,7 @@
                         </a>
                     </li>
                     <li class="nav-mb-item">
-                        <a href="shop-default#" class="tf-category-link mb-menu-link">
+                        <a href="#" class="tf-category-link mb-menu-link">
                             <div class="image">
                                 <img src="images/shop/cate/cate2.jpg" alt="">
                             </div>
@@ -3601,7 +3598,7 @@
                         </a>
                     </li>
                     <li class="nav-mb-item">
-                        <a href="shop-default#" class="tf-category-link mb-menu-link">
+                        <a href="#" class="tf-category-link mb-menu-link">
                             <div class="image">
                                 <img src="images/shop/cate/cate3.jpg" alt="">
                             </div>
@@ -3609,7 +3606,7 @@
                         </a>
                     </li>
                     <li class="nav-mb-item">
-                        <a href="shop-default#" class="tf-category-link mb-menu-link">
+                        <a href="#" class="tf-category-link mb-menu-link">
                             <div class="image">
                                 <img src="images/shop/cate/cate4.png" alt="">
                             </div>
@@ -3637,7 +3634,7 @@
                                     <div id="cate-shop-one" class="collapse">
                                         <ul class="sub-nav-menu sub-menu-level-2">
                                             <li>
-                                                <a href="shop-default#" class="tf-category-link sub-nav-link">
+                                                <a href="#" class="tf-category-link sub-nav-link">
                                                     <div class="image">
                                                         <img src="images/shop/cate/cate1.jpg" alt="">
                                                     </div>
@@ -3645,7 +3642,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="shop-default#" class="tf-category-link sub-nav-link">
+                                                <a href="#" class="tf-category-link sub-nav-link">
                                                     <div class="image">
                                                         <img src="images/shop/cate/cate8.jpg" alt="">
                                                     </div>
@@ -3666,7 +3663,7 @@
                                     <div id="cate-shop-two" class="collapse">
                                         <ul class="sub-nav-menu sub-menu-level-2">
                                             <li>
-                                                <a href="shop-default#" class="tf-category-link sub-nav-link">
+                                                <a href="#" class="tf-category-link sub-nav-link">
                                                     <div class="image">
                                                         <img src="images/shop/cate/cate4.png" alt="">
                                                     </div>
@@ -3674,7 +3671,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="shop-default#" class="tf-category-link sub-nav-link">
+                                                <a href="#" class="tf-category-link sub-nav-link">
                                                     <div class="image">
                                                         <img src="images/shop/cate/cate7.jpg" alt="">
                                                     </div>
@@ -3698,7 +3695,7 @@
                         <div id="cate-menu-two" class="collapse list-cate">
                             <ul class="sub-nav-menu" id="cate-menu-navigation1">
                                 <li>
-                                    <a href="shop-default#" class="tf-category-link sub-nav-link">
+                                    <a href="#" class="tf-category-link sub-nav-link">
                                         <div class="image">
                                             <img src="images/shop/cate/cate1.jpg" alt="">
                                         </div>
@@ -3706,7 +3703,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="shop-default#" class="tf-category-link sub-nav-link">
+                                    <a href="#" class="tf-category-link sub-nav-link">
                                         <div class="image">
                                             <img src="images/shop/cate/cate8.jpg" alt="">
                                         </div>
@@ -3717,7 +3714,7 @@
                         </div>
                     </li>
                     <li class="nav-mb-item">
-                        <a href="shop-default#" class="tf-category-link mb-menu-link">
+                        <a href="#" class="tf-category-link mb-menu-link">
                             <div class="image">
                                 <img src="images/shop/cate/cate7.jpg" alt="">
                             </div>
@@ -3725,7 +3722,7 @@
                         </a>
                     </li>
                     <li class="nav-mb-item">
-                        <a href="shop-default#" class="tf-category-link mb-menu-link">
+                        <a href="#" class="tf-category-link mb-menu-link">
                             <div class="image">
                                 <img src="images/shop/cate/cate8.jpg" alt="">
                             </div>
@@ -3743,7 +3740,7 @@
                         <div id="cate-menu-three" class="collapse list-cate">
                             <ul class="sub-nav-menu" id="cate-menu-navigation2">
                                 <li>
-                                    <a href="shop-default#" class="tf-category-link sub-nav-link">
+                                    <a href="#" class="tf-category-link sub-nav-link">
                                         <div class="image">
                                             <img src="images/shop/cate/cate4.png" alt="">
                                         </div>
@@ -3751,7 +3748,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="shop-default#" class="tf-category-link sub-nav-link">
+                                    <a href="#" class="tf-category-link sub-nav-link">
                                         <div class="image">
                                             <img src="images/shop/cate/cate7.jpg" alt="">
                                         </div>
@@ -3764,7 +3761,7 @@
                 </ul>
             </div>
             <div class="mb-bottom">
-                <a href="shop-default#" class="tf-btn fw-5 btn-line">View all collection<i class="icon icon-arrow1-top-left"></i></a>
+                <a href="#" class="tf-btn fw-5 btn-line">View all collection<i class="icon icon-arrow1-top-left"></i></a>
             </div>
         </div>       
     </div>
