--- a/index.html
+++ b/index.html
@@ -96,10 +96,9 @@
                             </ul>
                         </nav>
                         <ul class="header-list-categories tf-lg-hidden">
-                            <li class="categories-item active"><a href="home-multi-brand#" class="text-uppercase">Women</a></li>
-                            <li class="categories-item"><a href="home-men#" class="text-uppercase">Men</a></li>
-                            <li class="categories-item"><a href="home-kids#" class="text-uppercase">Kids</a></li>
-                            <li class="categories-item"><a href="store-locations#" class="text-uppercase">Find a Store</a></li>
+                            <li class="categories-item active"><a href="" class="text-uppercase">Kids Rugs</a></li>
+                            <li class="categories-item"><a href="" class="text-uppercase">Carpet Tiles</a></li>
+                            <li class="categories-item"><a href="" class="text-uppercase">Boat Carpet</a></li>
                         </ul>
                     </div>
                 </div>
